Added writers. Should now create sloppy .java files in output directory.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/ASCOMGenerator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ASCOMGenerator-output=output
 includes=**
 jar.compress=false
 javac.classpath=
@@ -42,7 +43,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.ASCOMGenerator-output}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
